--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "esModuleInterop": true,
     "strict": true,
     "declaration": true,
+    "declarationMap": true,
+    "sourceMap": true,
     "skipLibCheck": true
   }
 }
