--- a/package.json
+++ b/package.json
@@ -24,19 +24,25 @@
   ],
   "scripts": {
     "build": "tsc",
+    "typecheck": "tsc --noEmit",
     "prebuild": "rm -rf dist",
     "format": "prettier -w src",
+    "format:check": "prettier -c src",
     "lint": "eslint src",
     "fix": "eslint --fix src",
     "prepublish": "yarn run build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "devDependencies": {
+    "@types/jest": "^29.0.0",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
     "@typescript-eslint/parser": "^5.36.2",
     "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
+    "jest": "^29.0.2",
     "prettier": "^2.7.1",
+    "ts-jest": "^28.0.8",
+    "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   }
 }
