--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,5 +12,8 @@
     "declarationMap": true,
     "sourceMap": true,
     "skipLibCheck": true
-  }
+  },
+  "include": [
+    "src/index.ts"
+  ]
 }
