specify eslint ignore file

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,5 +17,9 @@
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
     "prettier"
+  ],
+  "ignorePatterns": [
+    "*.test.ts",
+    "testhelpers.ts"
   ]
 }
