--- a/package.json
+++ b/package.json
@@ -20,8 +20,13 @@
   ],
   "private": false,
   "files": [
-    "dist"
+    "dist",
+    "src"
   ],
+  "exports": {
+    ".": "./dist/index.js",
+    "./*": "./dist/*.js"
+  },
   "scripts": {
     "build": "tsc",
     "typecheck": "tsc --noEmit",
